# seamless-re

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.aws/: task-definition.json
.github/workflows/: aws.yml
notebooks/: dev_download.ipynb  dev_nb.ipynb
seamless_re/: app.py  collection.py  data_load.py  db_operations.py  ner.py  pipeline.py  relation.py  start.sh  stream.py  utils.py
seamless_re/database/: __init__.py  connection.py  memgraph.py  models.py
seamless_re/resources/: data_big.txt
seamless_re/static/css/: style.css
seamless_re/static/js/: index.js
seamless_re/templates/: base.html  index.html  query.html
tests/: test_seamless_re.py
